--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,46 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <base href="/">
-    <title>Lista de Presentes</title>
-    <script src="/js/app.js"></script>
-  </head>
+<html ng-app="myApp" lang="pt-br">
 
-  <body>
-    <h1>Lista de Presentes</h1>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="/">
+  <title></title>
+  <link rel="stylesheet" type="text/css" href="/css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="/css/acsset.min.css">
+  <link rel="stylesheet" type="text/css" href="/css/style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
+  <!--[if lt IE 9]>
+    <script type="text/javascript" src="/js/html5shiv.js"></script>
+  <![endif]-->
+</head>
+
+<body class="bg-gray">
+  <!-- header -->
+  <ng-include src="'views/inc_header.html'"></ng-include>
+  <!-- main -->
+  <div class="grid-container margin-top-xl">
+    <div class="grid-row">
+      <!-- menu -->
+      <div class="grid-xs-3">
+        <ng-include src="'views/inc_sidebar.html'"></ng-include>
+      </div>
+      <!-- content -->
+      <div class="grid-xs-9">
+        <div class="bg-white box-shadow padding-top-md padding-right-xl padding-bottom-md padding-left-xl">
+          <div ng-view></div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- footer -->
+  <ng-include src="'views/inc_footer.html'"></ng-include>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-route.min.js"></script>
+  <script type="text/javascript" src="/js/app.js"></script>
+  <script type="text/javascript" src="/js/controllers.js"></script>
+  <script type="text/javascript" src="/js/services.js"></script>
+</body>
+
 </html>
