--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,31 @@
 <!DOCTYPE html>
-<html lang="pt-br">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <base href="/">
-    <title>Lista de Presentes</title>
-    <script src="/js/app.js"></script>
-  </head>
+<html ng-app="myApp" lang="pt-br">
 
-  <body>
-    <h1>Lista de Presentes</h1>
-  </body>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <base href="/">
+  <title></title>
+  <link rel="stylesheet" type="text/css" href="/css/normalize.css">
+  <link rel="stylesheet" type="text/css" href="/css/acsset.min.css">
+  <link rel="stylesheet" type="text/css" href="/css/style.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
+  <!--[if lt IE 9]>
+    <script type="text/javascript" src="/js/html5shiv.js"></script>
+  <![endif]-->
+</head>
+
+<body class="bg-gray">
+
+  <div ng-view></div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-route.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-resource.min.js"></script>
+  <script type="text/javascript" src="/js/app.js"></script>
+  <script type="text/javascript" src="/js/controllers.js"></script>
+  <script type="text/javascript" src="/js/services.js"></script>
+</body>
+
 </html>
