Create logo and favicon

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <base href="/">
   <title></title>
+  <link rel="icon" href="/img/favicon.ico">
   <link rel="stylesheet" type="text/css" href="/css/normalize.css">
   <link rel="stylesheet" type="text/css" href="/css/acsset.min.css">
   <link rel="stylesheet" type="text/css" href="/css/style.css">
@@ -17,9 +18,7 @@
 </head>
 
 <body class="bg-gray">
-
   <div ng-view></div>
-
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-route.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-resource.min.js"></script>
