--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-route.min.js"></script>
   <script src="https://angular-file-upload.appspot.com/js/ng-file-upload.min.js"></script>
   <script src="https://sixthdim.github.io/angular-vertilize/angular-vertilize.min.js"></script>
+  <script src="https://cdn.rawgit.com/candreoliveira/ngMask/master/dist/ngMask.min.js"></script>
   <script type="text/javascript" src="/js/app.js"></script>
   <script type="text/javascript" src="/js/controllers.js"></script>
   <script type="text/javascript" src="/js/services.js"></script>
