Insert ngStorage; Remove requiredAuthentication of $routeProvider

--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,7 @@
   <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.6.1/angular-route.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.11/ngStorage.js"></script>
   <script src="https://angular-file-upload.appspot.com/js/ng-file-upload.min.js"></script>
   <script src="https://sixthdim.github.io/angular-vertilize/angular-vertilize.min.js"></script>
   <script src="https://cdn.rawgit.com/candreoliveira/ngMask/master/dist/ngMask.min.js"></script>
